fix z-index

--- a/css/modules/header.css
+++ b/css/modules/header.css
@@ -5,6 +5,7 @@
     padding: 1.5rem 1rem;
     position: sticky;
     top:0;
+    z-index: 1;
     background-color: white;
     box-shadow: 0 0 15px 8px rgba(0, 0, 0, .10);
 }
